fix filter input on safari

--- a/src/app/ui/pages/project/requests/project-requests.component.scss
+++ b/src/app/ui/pages/project/requests/project-requests.component.scss
@@ -41,7 +41,7 @@ md-sidenav {
   flex-direction: column;
 
   @media (max-width: $mobile-width) {
-    padding-bottom: 64px;
+    padding-bottom: 112px;
   }
 }
 
